css: fix image overflowing in posts

--- a/public/posts.css
+++ b/public/posts.css
@@ -2,6 +2,10 @@ p {
   margin-bottom: 1.2rem;
 }
 
+img {
+  width: -webkit-fill-available;
+}
+
 hr {
   margin: 0;
   padding-bottom: 24px;
